# sucrose

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
src/: lib.rs  to_static.rs
sucrose-macros/: Cargo.toml
sucrose-macros/src/: lib.rs
sucrose-usage/: Cargo.toml  build.rs
sucrose-usage/res/items/: apple.toml  pear.toml
sucrose-usage/res/npcs/: cat.toml  dog.toml
sucrose-usage/src/: main.rs
