[package]
name = "sucrose"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sucrose-macros = { version = "0.1.0", workspace = true }
proc-macro2 = "1.0.66"
quote = "1.0.31"
thiserror = "1.0.44"
serde = { version = "1.0.174", optional = true }
convert_case = "0.6.0"

[workspace]
members = [
	"sucrose-macros",
	"sucrose-usage",
]

resolver = "2"

[workspace.dependencies]
sucrose = { version = "0.1.0", path = "." }
sucrose-macros = { version = "0.1.0", path = "sucrose-macros/" }
