[package]
name = "sucrose"
version = "1.0.1"
edition = "2021"

repository = "https://github.com/eievui5/sucrose"
description = "Rust crate for embedding static data from files at build time."
license = "MIT"

keywords = [
	"encoding",
	"macro",
	"no_std",
	"serde",
	"serialization",
]

categories = [
	"data-structures",
	"development-tools::build-utils", 
	"embedded",
	"encoding",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sucrose-macros = { workspace = true }
proc-macro2 = "1.0.66"
quote = "1.0.31"
thiserror = "1.0.44"
serde = { version = "1.0.174", optional = true }
convert_case = "0.6.0"

[workspace]
members = [
	"sucrose-macros",
	"sucrose-usage",
]

resolver = "2"

[workspace.dependencies]
sucrose = { version = "1.0.0", path = "." }
sucrose-macros = { version = "1.0.0", path = "sucrose-macros/" }
