[package]
name = "sucrose-macros"
version = "1.0.1"
edition = "2021"

repository = "https://github.com/eievui5/sucrose"
description = "Procedural macros for sucrose."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
darling = "0.20.3"
proc-macro2 = "1.0.66"
quote = "1.0.31"
serde = { version = "1.0.171", features = ["derive"] }
syn = "2.0.26"
toml = "0.7.6"

[lib]
proc-macro = true
