[package]
name = "sucrose-usage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.4"

[build-dependencies]
sucrose = { workspace = true, features = ["serde"] }
serde = { version = "1.0.171", features = ["derive"] }
toml = "0.7.6"
anyhow = "1.0.72"
